# macross

./: .gitignore  Cargo.toml  README.md  a copy.txt  a.txt  b.txt
examples/all-MiniLM-L6-v2/: main.rs  test.py
examples/bert-base-chinese/: main.rs  test.py
examples/bge-m3/: main.rs  test.py  test2.py  test3.py
examples/cross-encoder/: main.rs  test.py
examples/gte-multilingual-base/: test.py
examples/xlm-roberta-base/: main.rs  test.py  test2.py
src/: activations.rs  hf.rs  lib.rs
src/m2/: xlm_roberta.rs
src/models/: auto.rs  bert.rs  bert_rs  bert_rs2  gte.rs  mod.rs  model_utils.rs  modelling_outputs.rs  roberta.rs  xlm_roberta.rs
