[package]
name = "macross"
version = "0.1.0"
edition = "2021"



[dependencies]
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0"
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-transformers="0.8.1"
tracing = "0.1.27"
tokenizers = "0.21.0"
hf-hub = "0.3.2"
anyhow = "1.0.40"

[dev-dependencies]

