[package]
name = "macross"
version = "0.1.0"
edition = "2021"



[dependencies]
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
candle-core = { path = "../candle/candle-core" }
candle-nn = { path = "../candle/candle-nn" }
candle-transformers = { path = "../candle/candle-transformers" }
tracing = "0.1.27"
tokenizers = "0.21.0"
hf-hub = "0.4.1"
anyhow = "1.0.98"

[dev-dependencies]

